--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "build": "sucrease ./src -d ./build --transforms javascript,imports",
     "start": "node build/server.js & node build/queue.js",
-    "dev": "nodemon src/server.js & nodemon src/queue.js",
+    "dev2": "nodemon src/server.js & nodemon src/queue.js",
+    "dev": "nodemon src/server.js",
     "queue": "nodemon src/queue.js",
     "dev:debug": "nodemon --inspect src/server.js",
     "pretest": "NODE_ENV=test sequelize db:migrate",
